--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "glob": "^5.0.13",
     "grunt": "0.4.5",
     "grunt-cli": "~0.1.13",
+    "grunt-contrib-less": "^1.4.0",
     "helmet": "~0.9.1",
     "jasmine-core": "^2.3.4",
+    "less": "^2.7.1",
     "lodash": "^3.10.0",
     "method-override": "^2.3.3",
     "mocha": "~1.20.0",
