--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-messages": "~1.3.17",
     "owasp-password-strength-test": "~1.3.0",
     "angular-ui-select": "^0.19.4",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "angular-redactor": "^1.1.6"
   },
   "resolutions": {
     "angular": "~1.3"
