--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "owasp-password-strength-test": "~1.3.0",
     "angular-ui-select": "^0.19.4",
     "angular-sanitize": "^1.5.8",
-    "angular-redactor": "^1.1.6"
+    "textAngular": "^1.5.12",
+    "components-font-awesome": "^4.6.3"
   },
   "resolutions": {
     "angular": "~1.3"
